# Test-Automation-Framework

./: .gitignore  README.md  conftest.py  extract.yaml  pyproject.toml  pytest.ini  run.py
.github/workflows/: test.yml
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/data/attachments/: 12ab1132ace9f81.txt  12cab5cf190e433c.txt  1312d4213e3b093c.txt  1385e1bed1e4033.txt  160808cf52161dd9.txt  16911f86738538cf.txt  182015ad49e8ec69.txt  194f75ea20b3e125.txt  19de9ab1d878fa4c.txt  1a3649aee9d9d9cb.txt  1aceff7ba904cd5b.txt  1beb008d79cfbc98.txt  1daa435fe0e47af3.txt  1e226d63610dd04e.txt  1e33a1c98e1a0753.txt  1f4095cf1b55769f.txt  20373a46138f7dd6.txt  20d165b144da7f30.txt  (+167 more)
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-report/widgets/: behaviors.json  duration-trend.json  duration.json  severity.json  status-chart.json  suites.json  summary.json
api_server/: pyproject.toml
api_server/base/: flask_service.py
common/: ai_analyzer.py  assertions.py  readyaml.py  semail.py  trend.py
common/notify/: __init__.py  feishu.py  notify_hub.py  wecom.py
conf/: config.ini  operationConfig.py  setting.py
report/: ai_analysis.md  results.xml
report/allureReport/: index.html
testcase/Business interface/: test_business_scenario.py
testcase/ProductManager/: getProductList.yaml  test_productList.py
testcase/Single interface/: queryUser.yaml  test_debug_api.py
tools/: ai_generator.py
(+78 files in other folders)
